fix: corrige NotaFiscalItemServiceTest para ficar de acordo com Java8